[package]
name = "bgp-hijack-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5"
rayon = "1.10"
petgraph = "0.6"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
chrono = "0.4"
flate2 = "1.0"
bzip2 = "0.4"
crossbeam-channel = "0.5"
anyhow = "1.0"
